--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcc 'DS'
 - !lcsh 'East Asia'
 - !lcsh 'Civilization, Oriental'
+- GITenberg
 title: "Where Half The World Is Waking Up\r\nThe Old and the New in Japan, China,\
   \ the Philippines, and India, Reported With Especial Reference to American Conditions"
 url: http://www.gutenberg.org/ebooks/29546
